--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   contacts_service: ^0.6.3
   permission_handler: ^10.0.0
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
